corrigindo erro 401 mudando a logica